tests/NormalTests/paczka1/small_fuzzy/81459768.err
Error in line 2: DqBbcw A62 2,4
Error in line 5: cZz0H1qB S386 95,7
Error in line 6: cZz0H1qB A690 45,9
Error in line 12: Hs43Z2u A690 -1,5
